--- a/spynnaker/spynnaker.cfg
+++ b/spynnaker/spynnaker.cfg
@@ -145,7 +145,7 @@ extra_xmls_paths = None
 # specExecOnHost: If True, execute specs on host then download to SpiNNaker
 #                 False not yet support, where specs are downloaded
 #                 to SpiNNaker and then executed.
-specExecOnHost = True
+specExecOnHost = False
 
 [MasterPopTable]
 # algorithm: {2dArray, BinarySearch, HashTable}
