--- a/spynnaker/spynnaker.cfg
+++ b/spynnaker/spynnaker.cfg
@@ -147,7 +147,7 @@ extra_xmls_paths = None
 # specExecOnHost: If True, execute specs on host then download to SpiNNaker
 #                 False not yet support, where specs are downloaded
 #                 to SpiNNaker and then executed.
-specExecOnHost = False
+specExecOnHost = True
 sendAsync = True
 
 [MasterPopTable]
