--- a/spynnaker/spynnaker.cfg
+++ b/spynnaker/spynnaker.cfg
@@ -148,7 +148,7 @@ extra_xmls_paths = None
 #                 False not yet support, where specs are downloaded
 #                 to SpiNNaker and then executed.
 specExecOnHost = False
-sendAsync = True
+sendAsync = False
 
 [MasterPopTable]
 # algorithm: {2dArray, BinarySearch, HashTable}
