--- a/spynnaker/spynnaker.cfg
+++ b/spynnaker/spynnaker.cfg
@@ -145,10 +145,10 @@ extra_xmls_paths = None
 [SpecExecution]
 #-------------
 # specExecOnHost: If True, execute specs on host then download to SpiNNaker
-#                 False not yet support, where specs are downloaded
+#                 False not yet support, where specs are downloadedp
 #                 to SpiNNaker and then executed.
 specExecOnHost = False
-sendAsync = False
+sendAsync = True
 
 [MasterPopTable]
 # algorithm: {2dArray, BinarySearch, HashTable}
