improvement of efficiency in both sides

--- a/spynnaker/spynnaker.cfg
+++ b/spynnaker/spynnaker.cfg
@@ -126,7 +126,7 @@ auto_detect_bmp = False
 turn_off_machine = False
 clear_routing_tables = False
 clear_tags = False
-enable_reinjection = True
+enable_reinjection = False
 reset_machine_on_startup = False
 
 [Mapping]
