stable version backup

--- a/spynnaker/spynnaker.cfg
+++ b/spynnaker/spynnaker.cfg
@@ -149,6 +149,7 @@ extra_xmls_paths = None
 #                 to SpiNNaker and then executed.
 specExecOnHost = False
 sendAsync = True
+useSDP = True
 
 [MasterPopTable]
 # algorithm: {2dArray, BinarySearch, HashTable}
@@ -188,7 +189,7 @@ mode = Production
 verify_writes = False
 
 [Database]
-create_database = None
+create_database = False
 wait_on_confirmation = True
 send_start_notification = True
 create_routing_info_to_neuron_id_mapping = True
