Bits of profiler resurrection curtesty of Mantas

--- a/neural_modelling/src/neuron/builds/Makefile.common
+++ b/neural_modelling/src/neuron/builds/Makefile.common
@@ -1,4 +1,5 @@
 SYNAPSE_BENCHMARK = NO_SYNAPSE_BENCHMARKS
+PROFILER_ENABLED = PROFILER_NOT_ENABLED
 
 ifeq ($(DEBUG), DEBUG)
     NEURON_DEBUG = LOG_DEBUG
@@ -9,6 +10,7 @@ endif
 ifndef NEURON_DEBUG
     NEURON_DEBUG = LOG_INFO
 endif
+CFLAGS += -D$(PROFILER_ENABLED) 
 
 ifndef SYNAPSE_DEBUG
     SYNAPSE_DEBUG = LOG_INFO
