--- a/neural_modelling/src/neuron/builds/Makefile.common
+++ b/neural_modelling/src/neuron/builds/Makefile.common
@@ -26,7 +26,7 @@ POPULATION_TABLE_IMPL ?= binary_search
 OBJECTS = $(SOURCE_DIRS)/common/out_spikes.o \
           $(SOURCE_DIRS)/common/recording.o $(SOURCE_DIRS)/neuron/c_main.o \
           $(SOURCE_DIRS)/neuron/synapses.o  $(SOURCE_DIRS)/neuron/neuron.o \
-	      $(SOURCE_DIRS)/neuron/spike_processing.o \
+	      $(SOURCE_DIRS)/neuron/spike_processing.o  $(SOURCE_DIRS)/neuron/profiler.o\
 	      $(SOURCE_DIRS)/neuron/population_table_$(POPULATION_TABLE_IMPL)_impl.o $(MODEL_OBJS)
 
 SYNAPSE_TYPE_OBJECTS += $(BUILD_DIR)neuron/c_main.o \
