stuff for FPGA insertation into the SpiNNMachine in a efficent manner. Also includes support for the different disucssed proposals for useage of fpga's.

--- a/spynnaker/spynnaker.cfg
+++ b/spynnaker/spynnaker.cfg
@@ -146,6 +146,10 @@ reset_machine_on_startup = False
 post_simulation_overrun_before_error = 5
 max_sdram_allowed_per_chip = None
 
+add_fpgas = True
+link_internal_fpga_together = False
+link_external_fpga_together = False
+
 [Mapping]
 
 # Algorithms below - format is  <algorithm_name>,<>
