--- a/spynnaker/pyNN/spynnaker.cfg
+++ b/spynnaker/pyNN/spynnaker.cfg
@@ -18,6 +18,9 @@ ring_buffer_sigma = 5
 # The amount of space to reserve for incoming spikes
 incoming_spike_buffer_size = 256
 
+# The resolution of the delays
+delay_quantisation_factor = 1
+
 [Mapping]
 # Algorithms below
 # pacman algorithms are:
