--- a/neural_modelling/src/neuron/Makefile
+++ b/neural_modelling/src/neuron/Makefile
@@ -21,7 +21,10 @@ MODELS = IF_curr_exp \
          IF_curr_exp_stdp_mad_nearest_pair_additive \
          IF_curr_exp_stdp_mad_nearest_pair_multiplicative \
          IF_curr_exp_stdp_mad_pfister_triplet_additive \
-         IF_cond_exp_stdp_mad_nearest_pair_additive
+         IF_cond_exp_stdp_mad_nearest_pair_additive \
+         IF_cond_exp_stdp_mad_pair_custom_additive \
+         IF_cond_exp_stdp_mad_pair_custom_additive_custom
+         
 BUILD_DIRS := $(addprefix builds/, $(MODELS))
 
 all: $(BUILD_DIRS)
